--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-    <!DOCTYPE html>
-    <html>
-    <head>
-    <title>Learning Git</title>
-    
-    </head>
-    <body>
-    <h1>Messing with Git</h1>
-    <p>Lerning as i go 21:30</p>
-    </body>
-    </html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Learning Git</title>
+</head>
+<body>
+<h1>Messing with Git again</h1>
+<p>Lerning as i go 21:30</p>
+</body>
+</html>
