--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Messing with Git again</h1>
-<p>Lerning as i go 15:30 server edit</p>
+<p>Lerning as i go 15:30 server edit2</p>
 </body>
 </html>
